Homepage tweaks pending something decent

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -10,39 +10,22 @@
 {% endblock %}
 {% block content %}
 <div class="container page-content">
-{% if not g.user %}
-{# 
-    No logged-in user, so lets show a little blurb.
-#}
+    {% if not g.user %}
+    {# 
+        No logged-in user, so lets show a little blurb.
+    #}
     <div class="hero-unit">
         <h1>{{ site_title }}</h1>
         <p>{{ site_label }} is my personal, open-source (<a href="http://en.wikipedia.org/wiki/MIT_License">MIT</a>) replacement for the now-defunct <a href="http://cia.vc">cia.vc</a> service.</p>
         <p><a class="btn btn-primary btn-large" href="{{ url_for('account.register') }}">Sign Up</a></p>
     </div>
     {% endif %}
-    <div class="row-fluid">
-        <div class="span12 well">
-            <div class="row-fluid">
-                <div class="span4 pagination-centered">
-                    <h2>Users</h2>
-                    <span class="count">{{ User.query.count() }}</span>
-                </div>
-                <div class="span4 pagination-centered">
-                    <h2>Projects</h2>
-                    <span class="count">{{ Project.query.count() }}</span>
-                </div>
-                <div class="span4 pagination-centered">
-                    <h2>Channels</h2>
-                    <span class="count">{{ Channel.query.count() }}</span>
-                </div>
-            </div>
-        </div>
-    </div>
+
     {% if Project.query.count() %}
     <div class="row-fluid">
-        <div class="span6 well">
+        <div class="span6">
             <h2>Newest Projects</h2>
-            {% for project in Project.public_q().order_by(Project.created.desc()).limit(10) %}
+            {% for project in Project.public_q().order_by(False).order_by(Project.created.desc()).limit(10) %}
             <div>
                 <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">{{ project.full_name }}</a><br/>
                 <small>
@@ -54,10 +37,31 @@
             </div>
             {% endfor %}
         </div>
-        <div class="span6 well">
+        <div class="span6">
             <h2>Fun Stats</h2>
+            <table class="table table-square">
+                <tbody>
+                    <tr>
+                        <td>Projects:</td>
+                        <td>{{ Project.query.count() }}</td>
+                    </tr>
+                    <tr>
+                        <td>Users:</td>
+                        <td>{{ User.query.count() }}</td>
+                    </tr>
+                    <tr>
+                        <td>Channels:</td>
+                        <td>{{ Channel.query.count() }}</td>
+                    </tr>
+                    <tr>
+                        <td>Hooks:</td>
+                        <td>{{ Hook.query.count() }}</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
     {% endif %}
+
 </div>
 {% endblock %}
