Fix displaying channel privacy as the project privacy.

--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -138,7 +138,7 @@
                         <td>{{ channel.port }}</td>
                         <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
                         <td style="text-align: center;">
-                            <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
+                            <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
                         </td>
                         <td>
                             <div class="pull-right">
