--- a/notifico/views/account/templates/settings.html
+++ b/notifico/views/account/templates/settings.html
@@ -6,6 +6,13 @@
         <h1>Account Settings</h1>
     </div>
 </div>
+<div class="page-main-actions">
+    <div class="container">
+        <ul class="nav nav-pills">
+            <li><a href="{{ url_for('.tokens') }}">OAuth Tokens</a></li>
+        </ul>
+    </div>
+</div>
 <div class="container page-content">
     <div class="row-fluid">
         <div class="span12 well">
