Add OAuth tokens to user menu.

--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -36,6 +36,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('account.settings') }}">Settings</a></li>
+                        <li><a href="{{ url_for('account.tokens') }}">OAuth Tokens</a></li>
                         <li class="divider"></li>
                         <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
                     </ul>
