--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -102,7 +102,8 @@
                         <th>Port</th>
                         <th>SSL</th>
                         {% if is_owner %}
-                        <td style="text-align: center;">Public</td>
+                        <th style="text-align: center;">Public</th>
+                        <th>Status</th>
                         <th></th>
                         {% endif %}
                     </tr>
@@ -117,6 +118,19 @@
                         {% if is_owner %}
                         <td style="text-align: center;">
                             <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
+                        </td>
+                        <td>
+                            {% if channel_status(channel) == 'ok' %}
+                            <span class="text-success">
+                            {% elif channel_status(channel) == 'fatal' %}
+                            <span class="text-error">
+                            {% elif channel_status(channel) == 'warning' %}
+                            <span class="text-warning">
+                            {% else %}
+                            <span>
+                            {% endif %}
+                                {{ channel_status(channel) }}
+                            </span>
                         </td>
                         <td>
                             <div class="pull-right">
@@ -139,6 +153,19 @@
                         <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
                         <td style="text-align: center;">
                             <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
+                        </td>
+                        <td>
+                            {% if channel_status(channel) == 'ok' %}
+                            <span class="text-success">
+                            {% elif channel_status(channel) == 'fatal' %}
+                            <span class="text-error">
+                            {% elif channel_status(channel) == 'warning' %}
+                            <span class="text-warning">
+                            {% else %}
+                            <span>
+                            {% endif %}
+                                {{ channel_status(channel) }}
+                            </span>
                         </td>
                         <td>
                             <div class="pull-right">
