--- a/notifico/templates/forms.html
+++ b/notifico/templates/forms.html
@@ -15,7 +15,7 @@
         {% endif %}
         {% if field.description %}
         <span class="help-block" style="color: black;">
-            {{ field.description }}
+            {{ field.description|safe }}
         </span>
         {% endif %}
     </div>
