--- a/notifico/views/projects/templates/edit_hook.html
+++ b/notifico/views/projects/templates/edit_hook.html
@@ -19,27 +19,14 @@ $(document).ready(function(){
 {% block content %}
 <div class="page-main-header">
     <div class="container">
-        <h1>Create Hook</h1>
+        <h1>Edit Hook - {{ service.SERVICE_NAME }}</h1>
     </div>
 </div>
 <div class="container page-content">
     <div class="row-fluid">
         <div class="span12">
             <div class="row-fluid">
-                <div class="span4">
-                    <ul class="nav nav-list">
-                        <li class="nav-header">Available Services</li>
-                        {% for s in services %}
-                        <li {% if s.SERVICE_ID == service.SERVICE_ID %}class="active"{% endif %}>
-                            <a href="{{ url_for('.new_hook', u=g.user.username, p=project.name, sid=s.SERVICE_ID) }}">
-                                {{ s.SERVICE_NAME }}
-                            </a>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                <div class="span8">
-                    <h2>{{ service.SERVICE_NAME }}</h2>
+                <div class="span12 well">
                     {{ service.service_description()|safe }}
                     <div class="row-fluid" style="margin-top: 20px;">
                         <div class="span12">
@@ -53,7 +40,7 @@ $(document).ready(function(){
                                 {% endfor %}
                                 {% endif %}
                                 <div class="form-actions">
-                                    <button type="submit" class="btn btn-primary">Create Hook</button>
+                                    <button type="submit" class="btn btn-primary">Save Changes</button>
                                     <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
                                 </div>
                             </form>
