Once again show alert messages.

--- a/notifico/views/account/templates/settings.html
+++ b/notifico/views/account/templates/settings.html
@@ -13,6 +13,7 @@
         </ul>
     </div>
 </div>
+{{ alerts() }}
 <div class="container page-content">
     <div class="row-fluid">
         <div class="span12 well">
