--- a/notifico/views/account/templates/tokens.html
+++ b/notifico/views/account/templates/tokens.html
@@ -6,6 +6,7 @@
         <h1>OAuth Tokens</h1>
     </div>
 </div>
+{{ alerts() }}
 <div class="container page-content">
     <div class="row-fluid">
         <div class="span12">
