--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -3,6 +3,17 @@
         <a href="{{ url_for(endpoint) }}">{{ label }}</a>
     </li>
 {% endmacro %}
+{% macro alerts() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+      {% if messages %}
+      <div class="container">
+        {% for category, message in messages %}
+          <div class="alert alert-{{ category }}" style="margin: 20px 0 2px 0;">{{ message }}</div>
+        {% endfor %}
+      </div>
+      {% endif %}
+    {% endwith %}
+{% endmacro %}
 <!DOCTYPE html>
 <html>
 <head>
