--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -46,6 +46,7 @@
     </div>
 </div>
 {% endif %}
+{{ alerts() }}
 <div class="container page-content">
     <div class="row-fluid">
         <div class="span12">
