--- a/notifico/views/projects/templates/delete_project.html
+++ b/notifico/views/projects/templates/delete_project.html
@@ -1,15 +1,11 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="page-main-header">
-    <div class="container">
-        <h1>Delete {{ project.full_name }}</h1>
-    </div>
-</div>
-<div class="container page-content">
+<div class="container-fluid page-content">
     <div class="row-fluid">
         <div class="span12 well">
             <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+                <legend>Delete Project</legend>
                 <p>If you're sure you want to delete the project <strong>{{ project.name }}</strong> enter your password.</p>
                 {{ form.hidden_tag() }}
                 {{ forms.render_field(form.password) }}
