--- a/notifico/views/projects/templates/edit_hook.html
+++ b/notifico/views/projects/templates/edit_hook.html
@@ -17,12 +17,7 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block content %}
-<div class="page-main-header">
-    <div class="container">
-        <h1>Edit Hook - {{ service.SERVICE_NAME }}</h1>
-    </div>
-</div>
-<div class="container page-content">
+<div class="container-fluid page-content">
     <div class="row-fluid">
         <div class="span12">
             <div class="row-fluid">
