--- a/notifico/views/account/templates/tokens.html
+++ b/notifico/views/account/templates/tokens.html
@@ -1,13 +1,7 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="page-main-header">
-    <div class="container">
-        <h1>OAuth Tokens</h1>
-    </div>
-</div>
-{{ alerts() }}
-<div class="container page-content">
+<div class="container-fluid page-content">
     <div class="row-fluid">
         <div class="span12">
             <p>OAuth tokens are used by {{ site_label }} to authenticate with 3rd party services on
