--- a/notifico/views/projects/templates/delete_hook.html
+++ b/notifico/views/projects/templates/delete_hook.html
@@ -1,16 +1,12 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="page-main-header">
-    <div class="container">
-        <h1>Delete Hook</h1>
-    </div>
-</div>
-<div class="container page-content">
+<div class="container-fluid page-content">
     <div class="row-fluid">
         <div class="span12 well">
             <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-                <p>Are you sure you want to delete this hook? You will not be able to create one with the same URL, and will have to reconfigure any services.</p>
+                <legend>Delete Hook</legend>
+                <p>Are you sure you want to delete this hook? You will not be able to create one with the same URL, and will have to reconfigure any services you have setup to use it.</p>
                 <div class="form-actions">
                     <button type="submit" class="btn btn-danger" value='d' name='do'>Delete Hook</button>
                     <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
