--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -7,7 +7,7 @@ active
 {% macro alerts() %}
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
-      <div class="container">
+      <div class="container-fluid">
         {% for category, message in messages %}
           <div class="alert alert-{{ category }}" style="margin: 20px 0 2px 0;">{{ message }}</div>
         {% endfor %}
